@@ -633,7 +633,7 @@ public class GUI implements Listener {
                 String title = createTitle(gui, player, finalPage, maxPage, displayItems, data);
                 PlayerGUInfo info = new PlayerGUInfo(finalPage, maxPage, name, data, displayItems, title);
                 Inventory inventory = gui.createInventory(player, finalPage, maxPage, displayItems, title, data);
-                NotBounties.getServerImplementation().global().run(() -> {
+                NotBounties.getServerImplementation().entity(player).run(() -> {
                     boolean guiOpen = playerInfo.containsKey(player.getUniqueId()) && gui.getType().equals(playerInfo.get(player.getUniqueId()).guiType()) && CompatabilityUtils.getTitle(player).equals(playerInfo.get(player.getUniqueId()).title());
                     playerInfo.put(player.getUniqueId(), info);
                     if (guiOpen) {
@@ -771,13 +771,19 @@ public class GUI implements Listener {
      * @param player Player who may have a GUI open
      */
     public static void safeCloseGUI(Player player, boolean shutdown) {
-        if (playerInfo.containsKey(player.getUniqueId())) {
-            // return any items placed in the inventory
-            Inventory topInventory = CompatabilityUtils.getTopInventory(player);
-            returnGUIItems(player, topInventory, shutdown);
-            playerInfo.remove(player.getUniqueId());
-            player.closeInventory();
+        if (!NotBounties.getServerImplementation().isOwnedByCurrentRegion(player) && !shutdown) {
+            NotBounties.getServerImplementation().entity(player).run(() -> safeCloseGUI(player, false));
+            return;
         }
+
+            if (playerInfo.containsKey(player.getUniqueId())) {
+                // return any items placed in the inventory
+                Inventory topInventory = CompatabilityUtils.getTopInventory(player);
+                returnGUIItems(player, topInventory, shutdown);
+                playerInfo.remove(player.getUniqueId());
+                player.closeInventory();
+            }
+
     }
 
     private static void returnGUIItems(Player player, Inventory inventory, boolean shutdown) {
@@ -884,12 +890,12 @@ public class GUI implements Listener {
                                     TextComponent message = LanguageOptions.getTextComponent(messageText);
                                     TextComponent prefix = LanguageOptions.getTextComponent(LanguageOptions.parse(LanguageOptions.getPrefix(), (OfflinePlayer) event.getWhoClicked()));
                                     message.setHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, new Text(messageText)));
-                                    message.setClickEvent(new ClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/" + ConfigOptions.getPluginBountyCommands().get(0) + " edit " + viewedBounty.getName() + " from " + playerName + " "));
+                                    message.setClickEvent(new ClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/" + ConfigOptions.getPluginBountyCommands().getFirst() + " edit " + viewedBounty.getName() + " from " + playerName + " "));
                                     prefix.addExtra(message);
                                     event.getWhoClicked().spigot().sendMessage(prefix);
                                 } else if (event.isLeftClick()) {
                                     event.getWhoClicked().closeInventory();
-                                    Bukkit.dispatchCommand(event.getWhoClicked(), ConfigOptions.getPluginBountyCommands().get(0) + " remove " + viewedBounty.getName() + " from " + playerName);
+                                    Bukkit.dispatchCommand(event.getWhoClicked(), ConfigOptions.getPluginBountyCommands().getFirst() + " remove " + viewedBounty.getName() + " from " + playerName);
                                 }
                             } else {
                                 // no longer has a bounty
@@ -919,16 +925,16 @@ public class GUI implements Listener {
                         openGUI((Player) event.getWhoClicked(), "set-whitelist", 1, info.data());
                         break;
                     case "select-price":
-                        NotBounties.getServerImplementation().global().run(() -> runGUIPluginCommand(event.getWhoClicked(), playerName + " " + info.page()));
+                        runGUIPluginCommand((Player) event.getWhoClicked(), playerName + " " + info.page());
                         if (!ConfigOptions.isBountyConfirmation())
                             event.getWhoClicked().closeInventory();
                         break;
                     case "bounty-hunt-time":
-                        NotBounties.getServerImplementation().global().run(() -> runGUIPluginCommand(event.getWhoClicked(), "hunt " + playerName + " " + info.page()));
+                        runGUIPluginCommand((Player) event.getWhoClicked(), "hunt " + playerName + " " + info.page());
                         event.getWhoClicked().closeInventory();
                         break;
                     case "bounty-item-select":
-                        if (!gui.getPlayerSlots().isEmpty() && event.getRawSlot() == gui.getPlayerSlots().get(0)) {
+                        if (!gui.getPlayerSlots().isEmpty() && event.getRawSlot() == gui.getPlayerSlots().getFirst()) {
                             // set bounty
                             ActionCommands.executeCommands((Player) event.getWhoClicked(), new ArrayList<>(Collections.singletonList("[p] " + ConfigOptions.getPluginBountyCommands().get(0) + " {data} --confirm")));
                         }
